# task-management-api

./: .gitignore  alembic.ini  mcp_server.py  opencode.json  pyproject.toml
alembic/: env.py
alembic/versions/: 52c25e916e1b_initial.py
prisma/: schema.prisma  seed.py
src/: config.py  database.py  main.py
src/models/: __init__.py
src/routers/: auth.py  categories.py  share_links.py  statuses.py  tasks.py  users.py
src/schemas/: auth.py  category.py  share_link.py  status.py  task.py  user.py
src/services/: auth_service.py  category_service.py  share_link_service.py  status_service.py  task_service.py  user_service.py
src/utils/: dependencies.py  security.py
