[project]
name = "task-management-api"
version = "0.1.0"
description = "FastAPI + SQLAlchemy Task Management Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "python-dotenv>=1.0",
    "alembic>=1.18",
    "mcp[cli]>=1.28",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
